# vnsopt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml
examples/: tsp.py
src/vnsopt/: __init__.py  types.py  vnd.py  vns.py
vnsopt/: __init__.py  vnd.py  vns.py
