[project]
name = "vnsopt"
version = "0.1.0"
description = "Variable Neighbourhood and Variable Neighbourhood Descent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "numpy>=2.4.1",
]

[tool.black]
line-length = 120
target-version = ['py312']
